force-app/main/default/objects/Case/fields/Easy__c.field-meta.xml
<CustomField>
    <fullName>Easy__c</fullName>
    <label>Easy</label>
    <length>50</length>
    <type>Text</type>
</CustomField>