force-app/main/default/objects/Case/fields/Efficiency__c.field-meta.xml
<CustomField>
    <fullName>Efficiency__c</fullName>
    <label>Efficiency</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>