force-app/main/default/objects/Case/fields/Velocity__c.field-meta.xml
<CustomField>
    <fullName>Velocity__c</fullName>
    <label>Velocity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>